<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/gas_station"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcoolougasolina_1_0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_by"/>

            <ImageView
                android:id="@+id/my_link"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/external_link_symbol"/>

        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_class"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FlatIcon\nhttps://developer.android.com/"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_icon"
                android:layout_margin="5dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/twitter_icon"
                android:layout_margin="5dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/instagram_icon"
                android:layout_margin="5dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whatsapp_icon"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/rate_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/rate_the_app"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

    </LinearLayout>
</RelativeLayout>