<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/info_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/information"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/gas_station"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gasolina"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"/>

            <SeekBar
                android:id="@+id/seekBar_gasolina"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/holo_orange_light"
                android:progress="0"
                android:max="1000"/>

            <TextView
                android:id="@+id/preco_gasolina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0.00"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alcool"
                android:textSize="20sp"
                android:layout_alignLeft="@+id/seekBar_alcool"
                android:layout_marginLeft="30dp"/>

            <SeekBar
                android:id="@+id/seekBar_alcool"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/holo_green_dark"
                android:progress="0"
                android:max="1000"/>

            <TextView
                android:id="@+id/preco_alcool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0.00"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textSize="20sp"
                android:layout_alignLeft="@+id/seekBar_result"
                android:layout_marginLeft="30dp"/>

            <ProgressBar
                android:id="@+id/progress_result"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:progress="50"
                android:max="100"
                android:progressBackgroundTint="@android:color/holo_green_dark"/>

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resultado"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Switch
                android:id="@+id/keep_alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_alcohol"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>